feat: initial-commit

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,10 +18,9 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+
+::selection{
+	background-color: theme('colors.fuchsia.500');
+  color: white;
 }
